//              __/ |           __/ |                                                      
//             |___/           |___/                                                       
//
// RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES

VERSION 1.2.1 of xx-xx-2025
---------------------------
1)  Ported to Visual Studio 20206
2)  - Added scrollbar bitmaps for high DPI settings (125%, 150% and 200%)
    - Fix for StyleScrollBar to properly display the new bitmaps
    - Fix for several classes to properly use the DPI changes per monitor
    - Changed the use of GetSystemMetrics to GetSystemMetricsForDpi where needed
3)  TAKE ACTION:
    - Re-implement your resource file numbers between 135 and 200 for the new scrollbar bitmaps
      So review your resource.h file for this number range
4)  StyleEdit is now also capable of binding with a std::string or a std::wstring in the
    DDX_Control() override for a string binding. This creates the possibility to bind to the
    XString class of the BaseLibrary.
5)  Style static now also supports right-alined texts


VERSION 1.2.0 of 07-11-2025
---------------------------
1)  This version supports High DPI and multiple monitors with different DPI settings
    To convert a program, add the "Manifest.xml" file to your project in the project settings
    in the "Manifest Tool" section. This sets the DPI-awareness to "Per Monitor v2".
    Turn off all other DPI settings in the project settings.
2)  The Multi-monitor capabilites are implemented in the StyleDialog and StyleFrameWnd(Ex) classes.
    They will automatically adjust their scaling when moved to another monitor with a different DPI.
3)  The following Multi-monitor messages are handled automatically:
    WM_GETDPISCALEDSIZE         -> Get the scaled size of the window for the current DPI (Sent first)
    WM_DPICHANGED_BEFOREPARENT  -> Sent to all the controls before the parent is resized